[misc] fix comments thing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,7 @@
       "italic": false
     },
     {
-      "tag": "-",
+      "tag": "§",
       "color": "#474747",
       "strikethrough": true,
       "backgroundColor": "transparent",
