[settings] fix service misspelling and make protocol optional for http-only services

--- a/configs/.env.myspace.example
+++ b/configs/.env.myspace.example
@@ -10,5 +10,6 @@ SPIRIT_HEADUNIT_HOST="127.0.0.1"
 # SPIRIT_SERVICE_TAG="ww-global-unknown-1" # Optional but change recommended
 
 SERVICE_PROTOCOL_PORT="1863"
-# SERIVCE_HTTP_PORT="9999" # Optional
+# SERVICE_ALTERNATE_PORT="8888" # Optional
+# SERVICE_HTTP_PORT="9999" # Optional
 SERVICE_FEATURES="" # This is a map that uses key:value,key:value
