--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   gsp:
     build:
@@ -42,6 +42,7 @@ services:
       - "5600:5600"
       - "5601:5601"
       - "5602:5602"
+      - "5603:5603"
     container_name: wfc
     volumes:
       - ./public:/app/public
