[wfc] simply nas port names

--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,10 @@ SERVICE_PORTS="
     router:1390,
     myspace:1863,
     proxy:80,
-    wfcnas-wii:5600,
+    wfcwii:5600,
     wfctest:5601,
     wfcdls1:5602,
-    wfcnas-ds:5603,
+    wfcds:5603,
     gpcm:29900,
     gpsp:29901
 "
