[wfc] add option to disable mkwii only mode

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,9 @@ SERVICE_PORTS="
 "
 
 # key:value map
-SERVICE_FEATURES="" 
+SERVICE_FEATURES="
+    wfc_nas_mkwii_only:true
+" 
 
 # key:value map (optional)
 SERVICE_PROXIES=" 
