[wfc] disable DS support and add safe file reading for future DLS1 support

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,8 @@ SERVICE_PORTS="
 
 # key:value map
 SERVICE_FEATURES="
-    wfc_nas_mkwii_only:true
+    wfc_nas_mkwii_only:true,
+    wfc_nas_enable_ds:false
 " 
 
 # key:value map (optional)
