--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ SERVICE_FEATURES="
 " 
 
 # key:value map (optional)
-SERVICE_PROXIES=" 
+SERVICE_HTTP_PROXIES=" 
     nas.nintendowifi.net:http://127.0.0.1:5603,
     naswii.nintendowifi.net:http://127.0.0.1:5600,
     conntest.nintendowifi.net:http://127.0.0.1:5601,
