[qr] add qr port to .env

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ SERVICE_PORTS="
     wfcdls1:5602,
     wfcds:5603,
     gpcm:29900,
-    gpsp:29901
+    gpsp:29901,
+    qr:27900
 "
 
 # key:value map
